--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,30 @@
-<%= link_to "Register", register_path %>
+<ul class="nav">
+  <li class="nav-item">
+    <a class="app-name" href="#">APi-BattleShip</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+</ul>
+
+<div class="row no-gutter">
+  <div class="col-6">
+    <%= link_to "Register", register_path %>
+  </div>
+
+  <div class="col-5">
+    <div class="banner">
+    </div>
+  </div>
+</div>
+
+]
