create sessions controller with new and create actions, add get login and post login routes, update views for sign in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,6 +19,7 @@
 <div class="row no-gutter">
   <div class="col-6">
     <%= link_to "Register", register_path %>
+    <%= link_to "Sign in", login_path %>
   </div>
 
   <div class="col-5">
