re organize scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,8 @@
  *= require_tree .
  *= require_self
  */
-
- @import "bootstrap"
+ @import 'base';
+ @import 'skeleton';
+ @import 'sections/navbar';
+ @import 'sections/banner';
+ @import 'sections/footer';
