add structure to navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="nav">
-  <ul class="nav-left">
+<nav class="navbar">
+  <ul class="nav">
     <li class="nav-item">
       <a class="app-name" href="#">APi-BattleShip</a>
     </li>
@@ -16,7 +16,7 @@
       <%= link_to image_tag("ship.png", alt: "ship", :id => 'nav-image'), '/' %>
     </li>
   </ul>
-  <ul class="nav-right">
+  <ul class="nav">
     <li><%= render partial: 'sessions/new' %></li>
   </ul>
 </nav>
