--- a/app/assets/stylesheets/sections/_navbar.scss
+++ b/app/assets/stylesheets/sections/_navbar.scss
@@ -1,9 +1,10 @@
-.nav {
-  align-items: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
   background-color: rgb(30, 60, 92);
   height: 60px;
   width: 100%;
-  .nav-link{
+  .nav-link {
     color: rgb(174, 184, 182);
     font-family: 'Share Tech', sans-serif;
   }
