add some styling to registration and dashboard pages

--- a/app/assets/stylesheets/sections/_banner.scss
+++ b/app/assets/stylesheets/sections/_banner.scss
@@ -1,13 +1,5 @@
-.banner-container {
-  position: fixed;
-  top: 60px;
-  right: 0;
-  width: 480px;
-}
-
 .banner {
+  height: inherit;
   width: auto;
-  background-image:  url("commander.png");
-  background-repeat: no-repeat;
-  height: 800px;
+  background-color: orange;
 }
