--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -1,5 +1,20 @@
-.section-container {
-  float: left;
-  width: 100%;
+$indigo: #30415D;
+
+main {
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  background-color: $indigo;
   height: 100%;
+  width: 100%;
+  .section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.status-container {
+  
 }
