--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
+ *= require base
  */
- @import 'base';
- @import 'skeleton';
- @import 'sections/navbar';
- @import 'sections/banner';
- @import 'sections/footer';
- @import 'components/forms';
+ 
