--- a/app/assets/stylesheets/sections/_footer.scss
+++ b/app/assets/stylesheets/sections/_footer.scss
@@ -1,15 +1,14 @@
 footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 4px;
   position: fixed;
   bottom: 0px;
   height: 35px;
-  background-color: rgb(30, 60, 92);
+  background-color: $ultramarine;
   width: 100%;
   color: rgb(86, 105, 110);
   .created-by {
-    font-family: 'Share Tech', sans-serif;
-    p {
-      display: inline-block;
-      font-family: 'Cedarville Cursive', cursive;
-    }
+    font-family: 'Allerta Stencil', sans-serif;
   }
 }
