--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,22 +1,15 @@
-<nav class="navbar">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="app-name" href="#">APi-BattleShip</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <%= link_to image_tag("ship.png", alt: "ship", :id => 'nav-image'), '/' %>
-    </li>
-  </ul>
-  <ul class="nav">
-    <li><%= render partial: 'sessions/new' %></li>
-  </ul>
+<nav class="navigation">
+  <div class="nav">
+    <%= link_to 'APi-BattleShip', root_path, class: 'app-name' %>
+    <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
+    <%= image_tag("ship.png", alt: "ship", id: 'nav-image')%>
+  </div>
+  <div class="nav">
+    <% if current_user %>
+      <p class="nav-link">Logged in as <%= current_user.name %></p>
+      <%= button_to 'Logout', logout_path, method: :delete, class: 'logout' %>
+    <% else %>
+      <%= render partial: 'sessions/new' %>
+    <% end %>
+  </div>
 </nav>
