add styling to registration form

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -1,10 +1,11 @@
 $indigo: #30415D;
-
+body {
+  background-color: $indigo;
+}
 main {
   padding-top: 60px;
   display: flex;
   justify-content: space-between;
-  background-color: $indigo;
   height: 100%;
   width: 100%;
   .section-container {
@@ -13,8 +14,4 @@ main {
     align-items: center;
     width: 100%;
   }
-}
-
-.status-container {
-  
 }
