--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,24 @@
+<h4 class="page-header">Create an Account</h4>
 <%= form_for @user do |f| %>
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %><br>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
 
+  <div class="form-group">
     <%= f.label :email %>
-    <%= f.email_field :email %><br>
+    <%= f.email_field :email, class: 'form-control' %>
+  </div>
 
+  <div class="form-group">
     <%= f.label :password %>
-    <%= f.password_field :password %><br>
+    <%= f.password_field :password, class: 'form-control' %>
+  </div>
 
+  <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
+  </div>
 
-  <%= f.submit "Register" %>
+  <center><%= f.submit "Register" %></center>
 <% end %>
