--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
     <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
     <%= image_tag("ship.png", alt: "ship", id: 'nav-image')%>
   </div>
-  <div class="nav">
+  <div class="nav nav-right">
     <% if current_user %>
       <p class="nav-link">Logged in as <%= current_user.name %></p>
       <%= button_to 'Logout', logout_path, method: :delete, class: 'logout' %>
