--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class="navigation">
   <div class="nav">
     <%= link_to 'APi-BattleShip', root_path, class: 'app-name' %>
-    <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
+    <% if current_user %>
+      <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
+    <% end %>
     <%= image_tag("ship.png", alt: "ship", id: 'nav-image')%>
   </div>
   <div class="nav nav-right">
