add black box below banner image - change text color of flash notices

--- a/app/assets/stylesheets/sections/_banner.scss
+++ b/app/assets/stylesheets/sections/_banner.scss
@@ -3,3 +3,12 @@
   width: auto;
   background-color: orange;
 }
+
+.banner-bottom {
+  position: absolute;
+  right: 0;
+  display: block;
+  background-color: black;
+  width: 668px;
+  height: 100px;
+}
