--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <%= image_tag 'commander.png', alt: 'commander', class: 'banner' %>
     </main>
 
+    <div class="banner-bottom">
+    </div>
+
     <footer>
       <p class="created-by">Anna Royer & Andrew Jeffery</p>
     </footer>
